--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
   "name": "callstats-jssip",
   "version": "1.0.0",
-  "description": "JsSIP interface to callstats.io",
-  "author": "Iñaki Baz Castillo <inaki@nimblea.pe> at Nimble Ape LTD (https://nimblea.pe)",
+  "description": "JsSIP interface for callstats.io",
+  "author": "Karthik BR <karthik@callstats.io>, Iñaki Baz Castillo <inaki@nimblea.pe>",
   "license": "UNLICENSED",
   "main": "lib/index.js",
   "dependencies": {
     "babel-runtime": "^6.18.0",
     "debug": "2.3.0"
   },
+    "repository": {
+    "type": "git",
+    "url": "git@github.com:callstats-io/callstats-jssip.git"
+  },
+  "keywords": [
+    "csio",
+    "common"
+  ],
+  "bugs": {
+    "url": "https://github.com/callstats-io/callstats-jssip/issues"
+  },
+  "homepage": "https://github.com/callstats-io/callstats-jssip/",
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
